--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ledgerhq/hw-app-eth": "4.74.2",
     "@ledgerhq/hw-transport": "4.74.2",
     "@ledgerhq/hw-transport-u2f": "4.74.2",
-    "@oikos/oikos-bsc": "^0.2.11",
+    "@oikos/oikos-bsc": "^0.2.14",
     "@oikos/oikos-data": "^0.1.7",
     "@walletconnect/web3-provider": "1.0.0-beta.47",
     "bignumber.js": "^9.0.1",
@@ -37,7 +37,8 @@
     "hdkey": "1.1.1",
     "lodash": "4.17.15",
     "trezor-connect": "7.0.3",
-    "walletlink": "1.0.0"
+    "walletlink": "1.0.0",
+    "web3-providers-ws": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
