--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@ledgerhq/hw-app-eth": "4.74.2",
     "@ledgerhq/hw-transport": "4.74.2",
     "@ledgerhq/hw-transport-u2f": "4.74.2",
-    "@oikos/oikos-bsc": "^0.2.31",
-    "@oikos/oikos-data": "^0.1.7",
+    "@oikos/oikos-bsc": "^0.2.32",
+    "@oikos/oikos-data-bsc": "^0.1.8",
     "@walletconnect/web3-provider": "1.0.0-beta.47",
     "bignumber.js": "^9.0.1",
     "ethereumjs-tx": "1.3.7",
