--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ledgerhq/hw-transport-u2f": "4.74.2",
     "@oikos/oikos-bsc": "^0.2.49",
     "@oikos/oikos-data-bsc": "^0.1.8",
-    "@walletconnect/web3-provider": "1.0.0-beta.47",
+    "@walletconnect/web3-provider": "^1.5.4",
     "bignumber.js": "^9.0.1",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "5.2.0",
