--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "abitojs": "node ./tools/abitojs.js",
     "webpack": "webpack --mode=production",
     "build": "npm run clear && npm run abitojs && npm run format && npm run docs && npm run webpack && npm test",
-    "rates": "babel-node examples/rates.js",
+    "rates": "babel-node examples/debtors.js",
     "repl": "NODE_OPTIONS='--experimental-repl-await' node ./repl",
     "repl:shasta": "TRON_NETWORK=shasta npm run repl",
     "repl:mainnet": "TRON_NETWORK=mainnet npm run repl"
@@ -28,7 +28,7 @@
     "@ledgerhq/hw-app-eth": "4.74.2",
     "@ledgerhq/hw-transport": "4.74.2",
     "@ledgerhq/hw-transport-u2f": "4.74.2",
-    "@oikos/oikos-bsc": "^0.2.58",
+    "@oikos/oikos-bsc": "^0.2.59",
     "@oikos/oikos-data-bsc": "^0.1.8",
     "@walletconnect/web3-provider": "^1.5.4",
     "bignumber.js": "^9.0.1",
