--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "abitojs": "node ./tools/abitojs.js",
     "webpack": "webpack --mode=production",
     "build": "npm run clear && npm run abitojs && npm run format && npm run docs && npm run webpack && npm test",
-    "rates": "babel-node examples/debtors.js",
-    "repl": "NODE_OPTIONS='--experimental-repl-await' node ./repl",
-    "repl:shasta": "TRON_NETWORK=shasta npm run repl",
-    "repl:mainnet": "TRON_NETWORK=mainnet npm run repl"
+    "example": "babel-node examples/index.js",
+    "repl": "NODE_OPTIONS='--experimental-repl-await' node ./repl"
   },
   "author": "Oikos",
   "license": "MIT",
@@ -34,7 +32,7 @@
     "bignumber.js": "^9.0.1",
     "ethereumjs-tx": "1.3.7",
     "ethereumjs-util": "5.2.0",
-    "ethers": "5.0.31",
+    "ethers": "5.6.8",
     "hdkey": "1.1.1",
     "lodash": "4.17.15",
     "trezor-connect": "7.0.3",
