--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "docs": "jsdoc src/index*.js src/contracts/bsc src/util -r -d ./doc -c jsdoc.json --readme README.md",
     "format": "prettier --write '{tools,lib,src,__tests__}/**/*.js'",
     "abitojs": "node ./tools/abitojs.js",
-    "webpack": "webpack --mode=production",
+    "webpack": "npx webpack-cli --mode development --output-library-type umd -t node",
     "build": "npm run clear && npm run abitojs && npm run format && npm run docs && npm run webpack && npm test",
     "example": "babel-node examples/index.js",
     "repl": "NODE_OPTIONS='--experimental-repl-await' node ./repl"
@@ -27,12 +27,12 @@
     "@ledgerhq/hw-app-eth": "4.74.2",
     "@ledgerhq/hw-transport": "4.74.2",
     "@ledgerhq/hw-transport-u2f": "4.74.2",
-    "@oikos/oikos-bsc": "^0.2.59",
+    "@oikos/oikos-bsc": "^0.2.60",
     "@oikos/oikos-data-bsc": "^0.1.8",
     "@walletconnect/web3-provider": "^1.5.4",
     "bignumber.js": "^9.0.1",
-    "ethereumjs-tx": "1.3.7",
-    "ethereumjs-util": "5.2.0",
+    "@ethereumjs/tx": "3.5.1",
+    "ethereumjs-util": "7.1.4",
     "ethers": "5.6.8",
     "hdkey": "1.1.1",
     "lodash": "4.17.15",
@@ -62,7 +62,7 @@
     "jest": "24.8.0",
     "jsdoc": "3.6.3",
     "prettier": "~1.14.2",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "5.72.1",
+    "webpack-cli": "4.9.2"
   }
 }
